# kolibri-installer-debian

./: .gitignore  COMMENT_REPLIES.json  Dockerfile  Makefile  README.md  README.rst  copy_from_pkg.sh  generate_changelog.py  ppa-copy-packages.py  ppa-mg-copy-packages.py  pubkey.asc  pyproject.toml
.buildkite/: build.sh  pipeline.yaml  test.sh
.github/: dependabot.yml
.github/workflows/: build_deb.yml  github_pages_ppa.yml  install_test.yml  pr_build.yml  prerelease.yml  promote_to_stable.yml  publish_debian_repo.yml  publish_github_pages_ppa.yml  release_launchpad_ppa.yml  release_ppa.yml  test.yml  test_build_deb.yml  upload_signed_sources.yml
build_scripts/: docker_build.sh  docker_test.sh
build_tools/: build.sh  docker_build.sh  docker_test.sh  generate_changelog.py  manage_python.py  preseed.cfg  python_versions.env  test.sh
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian/: README.etc  README.source  changelog  control  copyright  dh_installscripts-common  install-python.sh  kolibri-wrapper.sh  kolibri.config  kolibri.postinst  kolibri.postrm  kolibri.preinst  kolibri.prerm  kolibri.scripts-common  kolibri.templates  rules  test_build_sanity.sh
debian/patches/: cherrypy-6.2.0.diff  expanduser.diff  ifcfg.diff  kolibri_exercise_perseus_plugin.diff  rm-py2-modules  rm-py2only.diff  rm-python2  sentry_removals.diff  series
debian/po/: POTFILES.in  es.po  (+1 more)
scripts/: create_lp_creds.py  get_tarball.sh  launchpad_copy.py
tests/: test_generate_changelog.py  test_launchpad_copy.py
(+14 files in other folders)
